crates/aiken-project/src/verify/snapshots/aiken_project__verify__tests__generate_lakefile_default_rev.snap
---
source: crates/aiken-project/src/verify/tests.rs
expression: stable
---
import Lake
open Lake DSL

package AikenVerify where

@[default_target]
lean_lib AikenVerify where

require Blaster from git
  "https://github.com/input-output-hk/Lean-blaster" @ "<DEFAULT_BLASTER_REV>"

require PlutusCore from git
  "https://github.com/input-output-hk/PlutusCoreBlaster" @ "<DEFAULT_PLUTUS_CORE_REV>"
