crates/aiken-project/src/verify/snapshots/aiken_project__verify__tests__h4_debug_mode_emits_widened_def_and_partial_caveat.snap
---
source: crates/aiken-project/src/verify/tests.rs
expression: content
---
import AikenVerify.Utils
import PlutusCore.Integer
import PlutusCore.ByteString
import PlutusCore.UPLC.ScriptEncoding
import Blaster

namespace AikenVerify.Proofs.Permissions.prop_h4_debug_ok
open PlutusCore.Integer (Integer)
open PlutusCore.ByteString (ByteString)
open PlutusCore.Data (Data)
open PlutusCore.ByteString (ByteString)
open PlutusCore.Integer (Integer)
open PlutusCore.UPLC.CekMachine (State cekExecuteProgram)
open PlutusCore.UPLC.CekMachine
open PlutusCore.UPLC.Term (Term Const Program)
open AikenVerify.Utils

#import_uplc prog_permissions_test__prop_h4_debug_ok_97ffe25e PlutusV3 single_cbor_hex "./cbor/permissions_test__prop_h4_debug_ok_97ffe25e.cbor"
#import_uplc fuzzer_prog_permissions_test__prop_h4_debug_ok_97ffe25e PlutusV3 single_cbor_hex "./cbor/permissions_test__prop_h4_debug_ok_97ffe25e_fuzzer.cbor"

set_option maxRecDepth 16384
set_option maxHeartbeats 2000000

-- S4 AUDIT: 1 constraints dropped or widened during transition/helper lowering (sound over-approximation).
-- Each dropped constraint widens the generated theorem's preconditions.

def prop_h4_debug_ok_s4_packTrace (trace : List Data) : Data := Data.List trace

-- Bounded scenario trace envelope exported from Aiken.
def prop_h4_debug_ok_s4_traceWithinBounds (trace : List Data) : Prop :=
  1 <= trace.length

def prop_h4_debug_ok_s4_traceDepthWithinBounds (trace : List Data) : Prop :=
  0 <= trace.length - 1

-- S6 / H4 [DEBUG]: --allow-vacuous-subgenerators is on; sub-generator predicates
-- are widened to `fun _ _ => True`.  Each widening makes every constraint over the
-- sub-generator domain trivially provable, so the verdict is forced to `Partial`.
-- From Aiken module: permissions/test
def prop_h4_debug_ok_s4_scenario_inputs_baseline_prop : Data → Data → Prop := fun _ _ => True -- [WIDENED: sub-generator stubbed]

def prop_h4_debug_ok_s4_isValidTransition (state : Data) (transition : Data) : Prop :=
  (prop_h4_debug_ok_s4_scenario_inputs_baseline_prop state transition)

def prop_h4_debug_ok_s4_isValidTrace (trace : List Data) : Prop :=
  prop_h4_debug_ok_s4_traceWithinBounds trace ∧
  prop_h4_debug_ok_s4_traceDepthWithinBounds trace ∧
  ∃ (_initState : Data),
  ∀ (i : Fin trace.length),
    prop_h4_debug_ok_s4_isValidTransition _initState (trace.get i)

-- S5: image definition — prop_h4_debug_ok_s4_isValidScriptContext x holds iff x = packTrace(trace)
-- for some isValidTrace-satisfying trace.
def prop_h4_debug_ok_s4_isValidScriptContext (x : Data) : Prop :=
  ∃ (trace : List Data),
    prop_h4_debug_ok_s4_isValidTrace trace ∧ x = prop_h4_debug_ok_s4_packTrace trace

theorem prop_h4_debug_ok :
  ∀ (trace : List Data),
    prop_h4_debug_ok_s4_isValidTrace trace →
    proveTestsHalt prog_permissions_test__prop_h4_debug_ok_97ffe25e (dataArg (prop_h4_debug_ok_s4_packTrace trace)) := by
  blaster

end AikenVerify.Proofs.Permissions.prop_h4_debug_ok
