crates/aiken-project/src/verify/snapshots/aiken_project__verify__tests__tuple_int_int_component_bounds_generate_two_ranges.snap
---
source: crates/aiken-project/src/verify/tests.rs
expression: proof
---
import AikenVerify.Utils
import PlutusCore.Integer
import PlutusCore.ByteString
import PlutusCore.UPLC.ScriptEncoding
import Blaster

namespace AikenVerify.Proofs.My_module.test_pair_components
open PlutusCore.Integer (Integer)
open PlutusCore.ByteString (ByteString)
open PlutusCore.Data (Data)
open PlutusCore.Integer (Integer)
open PlutusCore.UPLC.CekMachine
open PlutusCore.UPLC.Term (Term Const Program)
open AikenVerify.Utils

#import_uplc prog_my_module__test_pair_components_b515ad40 PlutusV3 single_cbor_hex "./cbor/my_module__test_pair_components_b515ad40.cbor"
#import_uplc fuzzer_prog_my_module__test_pair_components_b515ad40 PlutusV3 single_cbor_hex "./cbor/my_module__test_pair_components_b515ad40_fuzzer.cbor"

set_option maxRecDepth 16384

-- Manifest-driven mode and execution metadata.
private abbrev testReturnMode : ReturnMode := .bool
private abbrev testMode : TestMode := .normal
private abbrev testDecodePolicy : DecodePolicy := .decodeErrorIsTestFailure
private abbrev testOutcome (args : List Term) : TestEvalOutcome :=
  RunProperty testReturnMode prog_my_module__test_pair_components_b515ad40 args

theorem test_pair_components :
  ∀ (a : Integer) (b : Integer),
  (0 <= a ∧ a <= 10)
  →
  (20 <= b ∧ b <= 30)
  →
  PropertySucceeds testReturnMode (testOutcome ([Term.Const (Const.Data (Data.List [Data.I a, Data.I b]))])) :=
  by blaster

theorem test_pair_components_alwaysTerminating :
  ∀ (a : Integer) (b : Integer),
  (0 <= a ∧ a <= 10)
  →
  (20 <= b ∧ b <= 30)
  →
  PropertyReturns testReturnMode (testOutcome ([Term.Const (Const.Data (Data.List [Data.I a, Data.I b]))])) :=
  by blaster

end AikenVerify.Proofs.My_module.test_pair_components
